[package]
name = "modulo-sys"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/federico-terzi/modulo"
authors = ["Federico Terzi <federicoterzi96@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = "1.0.58"
bindgen = "0.54.0"
regex = "1.3.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
