[package]
name = "modulo"
version = "0.1.0"
authors = ["Federico Terzi <federicoterzi96@gmail.com>"]
edition = "2018"

[dependencies]
modulo-sys = { path = "../modulo-sys" }
lazy_static = "1.4.0"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
serde_yaml = "0.8.13"
clap = "2.33.1"

[package.metadata.deb]
maintainer = "Federico Terzi <federicoterzi96@gmail.com>"
depends = "$auto, libwxgtk3.0-0v5"
section = "utility"
license-file = ["LICENSE", "1"]